// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignores files in ignored folders  1`] = `
{
  "stderr": "",
  "stdout": "not-ignored.js",
  "write": [],
}
`;

exports[`ignores ignore files when processing stdin  1`] = `
{
  "stderr": "",
  "stdout": ".name {
  display: none;
}",
  "write": [],
}
`;
